--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,21 @@ article > img {
   pointer-events: none;
 }
 
+input {
+  display: flex;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  width: 100%;
+  height: 2.5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  max-width: 20rem;
+}
+
 :root {
   --x: 0;
   --y: 0;
