--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,11 @@ body::before {
   z-index: -1;
 }
 
+[data-split] {
+  font-size: var(--font-size);
+  font-weight: 600;
+}
+
 article {
   width: 600px;
   aspect-ratio: 2 / 1.1;
@@ -51,7 +56,7 @@ article {
   overflow: hidden;
   border-radius: 4em;
   max-width: calc(100% - 2rem);
-  background: hsl(0 0% 50%);
+  /* background: hsl(0 0% 50%); */
 }
 
 article > img {
