--- a/src/App.css
+++ b/src/App.css
@@ -194,3 +194,13 @@ article h3 {
   mask: radial-gradient(50% 100% at 50% 90%, white 50%, transparent);
   filter: saturate(1.5) brightness(0.8);
 }
+
+.cardshuffle > div:nth-child(even) {
+  display: flex;
+  /* align-items: flex-end; */
+  justify-content: flex-end;
+}
+
+.cardshuffle > div:nth-child(even) article {
+  transform: rotate(3deg);
+}
