--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 /* @import "normalize.css"; */
+@import "@radix-ui/colors/black-alpha.css";
+@import "@radix-ui/colors/violet.css";
 
 *,
 *:after,
@@ -107,6 +109,7 @@ input {
   --x: 0;
   --y: 0;
   --font-size: clamp(2rem, 6vmin + 1rem, 4rem);
+  --xtest: 0;
 }
 
 article > img:first-of-type {
@@ -128,12 +131,13 @@ article h3 {
   text-transform: uppercase;
   font-family: "Bebas Neue", sans-serif;
   color: white;
-  translate: calc(-50% + (var(--x) * -30px)) calc(var(--y) * -20px);
+  translate: calc(-50% + (var(--x) * -30px)) calc(var(--xtest) * -20px);
 }
 
 .card {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 1.5rem;
   margin-top: 2rem;
 }
 
@@ -211,3 +215,58 @@ article h3 {
 .cardshuffle > div:nth-child(even) article {
   transform: rotate(3deg);
 } */
+
+.SliderRoot {
+  position: relative;
+  display: flex;
+  align-items: center;
+  user-select: none;
+  touch-action: none;
+  width: 200px;
+  height: 20px;
+}
+
+.SliderTrack {
+  background-color: var(--black-a10);
+  position: relative;
+  flex-grow: 1;
+  border-radius: 9999px;
+  height: 3px;
+}
+
+.SliderRange {
+  position: absolute;
+  background-color: white;
+  border-radius: 9999px;
+  height: 100%;
+}
+
+.SliderThumb {
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  box-shadow: 0 2px 10px var(--black-a7);
+  border-radius: 10px;
+}
+.SliderThumb:hover {
+  background-color: var(--violet-3);
+}
+.SliderThumb:focus {
+  outline: none;
+  box-shadow: 0 0 0 5px var(--black-a8);
+}
+
+.SliderRoot[data-orientation="vertical"] {
+  flex-direction: column;
+  width: 20px;
+  height: 100px;
+}
+
+.SliderTrack[data-orientation="vertical"] {
+  width: 3px;
+}
+
+.SliderRange[data-orientation="vertical"] {
+  width: 100%;
+}
